Added NPM, installed dependencies.  Set up workspace for project. Added the HTML code. Next is CSS.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,45 @@
      <title>Rock Paper Scissors | JavaScript</title>
 </head>
 <body>
-    
+     <nav class="navbar">
+          <div class="logo-container">
+               <a href="#webtek-info">
+                    <img src="src/assets/images/seethrough_1.png" alt="seethrough_1" class="logo-image">
+                    <span class="logo-text">WebTek</span>
+               </a>
+          </div>
+          <ul class="nav-list" id="navi-list">
+               <li class="list-item" hidden>
+                    <a href="#about-me">About Us</a>
+               </li>
+               <li class="list-item" hidden>
+                    <a href="#contact">Contact</a>
+               </li>
+               <li class="list-item" hidden>
+                    <a href="#contact">Support</a>
+               </li>
+          </ul>
+          <!-- <div class="menu" id="toggle-menu" onclick="toggleMenu()"> -->
+               <div class="menu" id="toggle-menu">
+                    <div class="menu-line"></div>
+                    <div class="menu-line"></div>
+                    <div class="menu-line"></div>
+               </div>
+     </nav>
+     <div class="main-content">
+
+     </div>
+
+     <div class="footer-container-fluid">
+          <div class="logo-copyright">
+               <img src="src/assets/images/seethrough_1.png" alt="seethrough_1" class="footer-logo">
+               <span class="footer-text">WebTek</span>
+          </div>
+          <div class="webmaster-contact" id="webtek-info">
+               <span class="footer-info">This page created and designed by</span>
+               <a href="mailto: tkremer@nc.rr.com" class="webmaster" id="contact">Thomas E. Kremer</a>
+          </div>
+     </div>
 
      <script src="dist/build.js" defer></script>
 </body>
