--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
      <meta charset="UTF-8">
 
      <meta name="title" content="Rock Paper Scissors">
      <meta name="description" content="Rock Paper Scissors Game With JavaScript">
-     <meta name="keywords"content="Babel, Bootstrap, CSS, ESLint, Flexbox, HTML, JavaScript, Rock, Paper, Scissors, Games">
+     <meta name="keywords"
+          content="Babel, Bootstrap, CSS, ESLint, Flexbox, HTML, JavaScript, Rock, Paper, Scissors, Games">
      <meta name="author" content="Thomas E. Kremer">
 
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,16 +16,22 @@
      <!-- Bring in google fonts -->
      <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
      <link href="https://fonts.googleapis.com/css?family=Montserrat+Alternates&display=swap" rel="stylesheet">
-    
+
      <!-- Bring in bootstrap  -->
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+          integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+          crossorigin="anonymous"></script>
+
+          <script src="https://kit.fontawesome.com/e391ce7786.js" crossorigin="anonymous"></script>
 
      <link rel="stylesheet" href="src/assets/css/rock-paper-scissors.css">
      <script src="src/javascript/index.js" defer></script>
 
      <title>Rock Paper Scissors | JavaScript</title>
 </head>
+
 <body>
      <nav class="navbar">
           <div class="logo-container">
@@ -44,14 +52,44 @@
                </li>
           </ul>
           <!-- <div class="menu" id="toggle-menu" onclick="toggleMenu()"> -->
-               <div class="menu" id="toggle-menu">
-                    <div class="menu-line"></div>
-                    <div class="menu-line"></div>
-                    <div class="menu-line"></div>
-               </div>
+          <div class="menu" id="toggle-menu">
+               <div class="menu-line"></div>
+               <div class="menu-line"></div>
+               <div class="menu-line"></div>
+          </div>
      </nav>
      <div class="main-content">
+          <h1>Rock Paper Scissors</h1>
 
+          <h2>Try your luck !</h2>
+
+          <div class="game-container">
+               <!--   The first section     -->
+               <div class="section">
+                    <div class="info">
+                         <h3>You :</h3><span id="playerScore">0</span>
+                    </div>
+                    <div class="show">
+                         <i class="fas fa-hand-rock"></i>
+                    </div>
+               </div>
+               <!--   The second section     -->
+               <div class="section">
+                    <div class="info">
+                         <h3>Computer :</h3><span id="computerScore">0</span>
+                    </div>
+                    <div class="show computer">
+                         <i class="fas fa-hand-scissors"></i>
+                    </div>
+               </div>
+          </div>
+          <h2 id="demo">Choose one !</h2>
+          <div class="game-selection">
+               <button class="fas fa-hand-rock" id="rock"></button>
+               <button class="fas fa-hand-paper" id="paper"></button>
+               <button class="fas fa-hand-scissors" id="scissors"></button>
+
+          </div>
      </div>
 
      <div class="footer-container-fluid">
@@ -67,4 +105,5 @@
 
      <script src="dist/build.js" defer></script>
 </body>
+
 </html>
