Switched script imports, commented out my script file and uncommented the build.js script file.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <script src="https://kit.fontawesome.com/e391ce7786.js" crossorigin="anonymous"></script>
 
      <link rel="stylesheet" href="src/assets/css/rock-paper-scissors.css">
-     <script src="src/javascript/index.js" defer></script>
+     <!-- <script src="src/javascript/index.js" defer></script> -->
 
      <title>Rock Paper Scissors | JavaScript</title>
 </head>
